Added some line

--- a/ritas.html
+++ b/ritas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rita Adhikari</title>
     <h1>this is rita adhikariSS</h1>
+    <h3>this is my added line of code</h3>
 </head>
 <body>
     
