binita added some lines

--- a/ritas.html
+++ b/ritas.html
@@ -6,6 +6,7 @@
     <title>Rita Adhikari</title>
     <h1>this is rita adhikariSS</h1>
     <h3>this is my added line of code</h3>
+    <h3>This is binita added line</h3>
 </head>
 <body>
     
